--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -54,8 +54,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="330" height="336"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BzW-S2-1B7">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BzW-S2-1B7">
                                             <rect key="frame" x="0.0" y="0.0" width="330" height="336"/>
+                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         </imageView>
                                     </subviews>
                                 </view>
@@ -84,6 +85,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="flowLayout" destination="DIU-Vf-VXK" id="Ehw-ye-DM9"/>
+                        <segue destination="2vU-XY-Dzv" kind="show" identifier="CollectionDetailSegue" action="showDetailViewController:sender:" id="jfK-nF-B5z"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dcT-1e-k5K" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -107,7 +109,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gxX-Ri-gy9">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gxX-Ri-gy9">
                                             <rect key="frame" x="2" y="2" width="56" height="55.5"/>
                                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
@@ -167,6 +169,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="2vU-XY-Dzv" kind="show" identifier="TableDetailSegue" id="FEC-hR-Uf1"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aQX-9c-OoC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -291,7 +296,43 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="881" y="-49"/>
+            <point key="canvasLocation" x="908" y="-36"/>
+        </scene>
+        <!--Meme Me Detail View Controller-->
+        <scene sceneID="aaO-e8-sa9">
+            <objects>
+                <viewController storyboardIdentifier="DetailViewController" id="2vU-XY-Dzv" customClass="MemeMeDetailViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="S4S-Lg-WpF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="s7k-fD-bYb">
+                                <rect key="frame" x="8" y="72" width="359" height="538"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="s7k-fD-bYb" firstAttribute="top" secondItem="NYa-Sr-wDf" secondAttribute="top" constant="8" id="CGX-TK-e7e"/>
+                            <constraint firstItem="NYa-Sr-wDf" firstAttribute="bottom" secondItem="s7k-fD-bYb" secondAttribute="bottom" constant="8" id="TDI-gh-rJn"/>
+                            <constraint firstItem="s7k-fD-bYb" firstAttribute="leading" secondItem="NYa-Sr-wDf" secondAttribute="leading" constant="8" id="Wzm-Bw-I4W"/>
+                            <constraint firstItem="NYa-Sr-wDf" firstAttribute="trailing" secondItem="s7k-fD-bYb" secondAttribute="trailing" constant="8" id="twg-sE-YHv"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="NYa-Sr-wDf"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="D7f-C5-5gP">
+                        <barButtonItem key="rightBarButtonItem" title="Edit" id="k03-cz-5ZQ">
+                            <connections>
+                                <action selector="editMemePressed:" destination="2vU-XY-Dzv" id="jiC-eu-g0z"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="memedImageView" destination="s7k-fD-bYb" id="QBy-mL-uNW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lVd-bF-OMM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1815" y="-36"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="l8o-DU-MzO">
@@ -337,6 +378,7 @@
         <image name="table_30x30" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="CEX-lq-YcL"/>
+        <segue reference="FEC-hR-Uf1"/>
+        <segue reference="0yO-Dz-Agf"/>
     </inferredMetricsTieBreakers>
 </document>
